@@ -1989,6 +1989,8 @@ $wgAutoloadLocalClasses = [
 	'MediaWiki\\SiteStats\\SiteStats' => __DIR__ . '/includes/SiteStats/SiteStats.php',
 	'MediaWiki\\SiteStats\\SiteStatsInit' => __DIR__ . '/includes/SiteStats/SiteStatsInit.php',
 	'MediaWiki\\Site\\MediaWikiPageNameNormalizer' => __DIR__ . '/includes/site/MediaWikiPageNameNormalizer.php',
+	'MediaWiki\\Site\\Site' => __DIR__ . '/includes/site/Site.php',
+	'MediaWiki\\Site\\SiteList' => __DIR__ . '/includes/site/SiteList.php',
 	'MediaWiki\\Skin\\ComponentRegistryContext' => __DIR__ . '/includes/skins/components/ComponentRegistryContext.php',
 	'MediaWiki\\Skin\\SkinComponent' => __DIR__ . '/includes/skins/components/SkinComponent.php',
 	'MediaWiki\\Skin\\SkinComponentCopyright' => __DIR__ . '/includes/skins/components/SkinComponentCopyright.php',
