@@ -18,6 +18,9 @@
  * @file
  */
 
+use MediaWiki\Site\Site;
+use MediaWiki\Site\SiteList;
+
 /**
  * Utility for exporting site entries to XML.
  *
