@@ -1,5 +1,8 @@
 <?php
 
+use MediaWiki\Site\Site;
+use MediaWiki\Site\SiteList;
+
 /**
  * @covers CachingSiteStore
  * @group Site
