@@ -18,11 +18,14 @@
  * @file
  */
 
- /**
-  * @covers SiteList
-  * @group Site
-  * @author Jeroen De Dauw < jeroendedauw@gmail.com >
-  */
+use MediaWiki\Site\Site;
+use MediaWiki\Site\SiteList;
+
+/**
+ * @covers SiteList
+ * @group Site
+ * @author Jeroen De Dauw < jeroendedauw@gmail.com >
+ */
 class SiteListTest extends MediaWikiIntegrationTestCase {
 
 	/**
