@@ -1,5 +1,7 @@
 <?php
 
+use MediaWiki\Site\Site;
+
 /**
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
